<resources>
    <string name="app_name">TermProject_DatingApp</string>
    <string name="title_activity_login_page">login_page</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="last_name" />
    <string name="first_name" />
    <string name="email" />
    <string name="password" />
    <string name="hint_password">Password</string>
    <string name="hint_email">Your College Email</string>
    <string name="sign_in">Sign In</string>
    <string name="bio">User has not written BIO yet</string>
    <string name="profile_program">User Program</string>
    <string name="profile_username" />
    <string-array name="programs_array">
        <item>Select Program</item>
        <item>Accounting</item>
        <item>Anthropology</item>
        <item>Bachelor of Performing Arts</item>
        <item>Biology</item>
        <item>Business</item>
        <item>Business Law</item>
        <item>Chemistry</item>
        <item>Child and Youth Care</item>
        <item>Commerce &amp; Business Administration</item>
        <item>Communications</item>
        <item>Computing Science</item>
        <item>Computing Studies &amp; Information Systems</item>
        <item>Creative Writing</item>
        <item>Criminology</item>
        <item>Disability &amp; Community Studies</item>
        <item>Dispensing Opticianry</item>
        <item>Early Childhood Education</item>
        <item>Earth &amp; Environmental Sciences</item>
        <item>Economics</item>
        <item>Engineering</item>
        <item>English</item>
        <item>English Language Learning and Acquisition</item>
        <item>Finance</item>
        <item>Gender, Sexualities and Women\'s Studies</item>
        <item>Geography and the Environment</item>
        <item>Geological Resources</item>
        <item>Global Learning Global Citizenship</item>
        <item>Health Information Management</item>
        <item>Hearing Instrument Practitioner</item>
        <item>History</item>
        <item>Hospitality Management</item>
        <item>Humanities &amp; Social Sciences</item>
        <item>Intercultural and International Studies</item>
        <item>Interdisciplinary HSS</item>
        <item>Interdisciplinary LLPA</item>
        <item>Legal Studies</item>
        <item>Marketing</item>
        <item>Mathematics</item>
        <item>Mathematics &amp; Science Teaching</item>
        <item>Mental Health and Personal Support Work</item>
        <item>Modern Languages</item>
        <item>Music</item>
        <item>Nursing</item>
        <item>Nursing - Psychiatric</item>
        <item>Office Administration</item>
        <item>Opticianry</item>
        <item>Performing &amp; Fine Arts</item>
        <item>Philosophy</item>
        <item>Political Science</item>
        <item>Psychology</item>
        <item>Science &amp; Technology</item>
        <item>Sign Language Interpretation</item>
        <item>Social Work</item>
        <item>Sociology</item>
        <item>Sport Science</item>
        <item>Stagecraft &amp; Event Technology</item>
        <item>Teaching English as a Second Language</item>
        <item>Theatre</item>
        <item>Therapeutic Recreation</item>
        <item>Veterinary Technology</item>
        <item>Vocational Education and Skills Training</item>
        <item>Youth Justice</item>
    </string-array>
</resources>